<resources>
    <string name="app_name">Stendhal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="periodo_nome">Nome</string>
    <string name="periodo_anno">Anno</string>
    <string name="image_period">image_period</string>
    <string name="email">E-mail</string>
    <string name="Nome">Nome</string>
    <string name="Search">Cosa stai cercando ?</string>
    <string name="quadro_nome">Nome</string>
    <string name="Delete">Elimina</string>
    <string name="modify">Modifica</string>
    <string name="AlertMessage">Sei sicuro di voler cancellare questo quadro?</string>
    <string name="quadro_autore">Autore</string>
    <string name="PositiveButton">Si</string>
    <string name="NegativeButton">No</string>
    <string name="quadro_anno">Anno</string>
    <string name="image_quadro">image_quadro</string>
    <string name="defaults">defaults</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="Autologin">Accesso automatico</string>
    <string name="Password">Password</string>
    <string name="Inserisci">Inserire la foto del quadro:</string>
    <string name="crea">Crea</string>
    <string name="Logout">Logout</string>
    <string name="newaccount">Creazione nuovo account</string>

</resources>
