<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView
            android:text="@string/quadro_nome"
            android:layout_width="242dp"
            android:layout_height="wrap_content" android:id="@+id/textNome"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_quadro" android:layout_marginStart="20dp"
    />


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[13]"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:id="@+id/image_quadro"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/image_quadro"/>
    <TextView

            android:text="@string/quadro_autore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textAutore"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textNome" app:layout_constraintStart_toStartOf="@+id/image_quadro"
            android:layout_marginStart="148dp"/>
    <TextView
            android:text="@string/quadro_anno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAnno" android:layout_marginTop="38dp"
            app:layout_constraintTop_toTopOf="@+id/textAutore" app:layout_constraintStart_toEndOf="@+id/image_quadro"
            android:layout_marginStart="20dp"/>

</android.support.constraint.ConstraintLayout>